--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -47,7 +47,7 @@
       <div id="header">
       </div>
 
-      <section id="qcapp">
+      <section id="app">
       </section>
 
 
@@ -68,8 +68,8 @@
         </div>
       </div>
 
-    <script src="../static/js/config.js"></script>
-    <script data-main="js/main" src="../static/bower_components/requirejs/require.js"></script>
+    <script src="static/js/config.js"></script>
+    <script data-main="js/main" src="static/bower_components/requirejs/require.js"></script>
 
   </body>
 </html>
