--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,8 +10,7 @@
 
 <title>Gitboard</title>
 
-  <!-- @echo cssTags -->
-
+    <link rel="stylesheet" type="text/css" href="/static/css/all.min.css" />
 
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
