--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,14 +12,6 @@
 
     <link rel="stylesheet" type="text/css" href="static/css/all.min.css" />
 
-
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-      <![endif]-->
-
 </head>
 
 <body>
@@ -33,7 +25,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-              <a class="navbar-brand" href="/">Gitboard<sup>&beta;</sup></a>
+              <a class="navbar-brand" href="#/">Gitboard<sup>&beta;</sup></a>
           </div>
           <div class="collapse navbar-collapse" id="menu">
             <ul class="nav navbar-nav">
@@ -53,15 +45,11 @@
       <div class="footer">
         <div class="container">
           <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
-              <a href="http://docs.quantifiedcode.com">Docs</a> <a href="http://docs.quantifiedcode.com/faq">FAQ</a> <a href="/contact">Contact</a>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center">
-              <!-- <a href="/team">Team</a> <a href="/jobs">Jobs</a> <a href="http://quantifiedcode.com/blog">Blog</a> --> <a href="http://twitter.com/quantifiedcode" target="_blank">Twitter</a>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-right">
-              <!-- <a href="/terms">Terms</a> -->
-               <a href="/security">Security</a><a href="/imprint">Imprint</a>
+            <div class="col-md-12 text-center">
+                Made by <a href="https://www.quantifiedcode.com">QuantifiedCode</a> // 
+                <a href="https://github.com/quantifiedcode/gitboard">Github Repository</a> //
+                <a href="http://twitter.com/quantifiedcode" target="_blank">Twitter</a> //
+               <a href="https://www.quantifiedcode.com/imprint">Imprint</a>
             </div>
           </div>
         </div>
