Made routing configurable.

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,7 +10,7 @@
 
 <title>Gitboard</title>
 
-    <link rel="stylesheet" type="text/css" href="/static/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="static/css/main.css" />
 
 </head>
 
@@ -55,8 +55,8 @@
         </div>
       </div>
 
-    <script src="/static/js/config.js"></script>
-    <script data-main="js/main" src="/static/bower_components/requirejs/require.js"></script>
+    <script src="static/js/config.js"></script>
+    <script data-main="js/main" src="static/bower_components/requirejs/require.js"></script>
 
   </body>
 </html>
