--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -130,3 +130,37 @@ body{
 .sprintboard .issue-item .label-11{
     left:50px;
 }
+
+/*Request Indicator*/
+
+p.request-indicator {
+
+    width: auto;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    margin-left: -70px;
+    border: 1px solid get-color(gold, dark);
+    border-top: none;
+    padding: 5px 15px;
+    font-size: 12px;
+    z-index: 1000;
+    background: get-color(gold, light);
+    color: get-color(grayscale, dark);
+    text-align: center;
+
+    -webkit-box-shadow: 0px 2px 3px 0px get-color(black, $alpha: 0.3);
+    -moz-box-shadow:    0px 2px 3px 0px get-color(black, $alpha: 0.3);
+    box-shadow:         0px 2px 3px 0px get-color(black, $alpha: 0.3);
+
+    > a {
+        color: get-color(grayscale, dark);
+
+        &:hover {
+            text-decoration: none;
+        }
+        > .fa-spin, > .fa-exclamation-triangle {
+            margin-right: 5px;
+        }
+    }
+}
