Worked on OS release.

--- a/src/scss/_above_the_fold.scss
+++ b/src/scss/_above_the_fold.scss
@@ -15,3 +15,7 @@
 
 // Import partials
 @import "partials/request_indicator";
+@import "partials/sprintboard";
+@import "partials/milestones";
+@import "partials/organizations";
+@import "partials/repositories";
