--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -42,18 +42,19 @@
       </section>
 
 
-      <div class="footer">
+      <footer class="footer navbar-fixed-bottom">
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-center">
-                Made by <a href="https://www.quantifiedcode.com">QuantifiedCode</a> // 
-                <a href="https://github.com/quantifiedcode/gitboard">Github Repository</a> //
-                <a href="http://twitter.com/quantifiedcode" target="_blank">Twitter</a> //
-               <a href="https://www.quantifiedcode.com/imprint">Imprint</a>
+                <p class="text-muted">
+                    Made by <a href="http://www.andreas-dewes.de/en">Andreas Dewes</a> // 
+                    <a href="https://github.com/adewes/gitboard">Github</a> //
+                    <a href="http://twitter.com/japh44" target="_blank">Twitter</a>
+                </p>
             </div>
           </div>
         </div>
-      </div>
+      </footer>
 
     <script src="static/js/config.js"></script>
     <script data-main="js/main" src="static/bower_components/requirejs/require.js"></script>
