--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -25,7 +25,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-              <a class="navbar-brand" href="#/">Gitboard<sup>&beta;</sup></a>
+              <a class="navbar-brand" href="#">Gitboard</a>
           </div>
           <div class="collapse navbar-collapse" id="menu">
             <ul class="nav navbar-nav">
