--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -41,7 +41,7 @@
         <div class="jumbotron">
             <h1 class="text-center">Github + Kanban = <strong>Gitboard</strong></h1>
             <hr />
-            <p class="text-center">Gitboard is a simple and intuitive <strong>Kanban board</strong> for your <strong>Github issues</strong>. Easily manage to-dos, milestones and teams and keep up-to-date on your progress. Gitboard is <strong>open-source</strong> and runs <strong>securely</strong> inside your browser.</p>
+            <p class="text-center">Gitboard is a simple and intuitive <strong>Kanban board</strong> for your <strong>Github issues</strong>. Easily manage to-dos, milestones and projects and keep up-to-date on your progress. Gitboard is <strong>open-source</strong> and runs <strong>securely</strong> inside your browser.</p>
             <p class="text-center">
                 <a class="btn btn-primary btn-lg btn-success" href="app.html#/sprintboard/adewes/gitboard/1" role="button">See an example</a>
                 <a class="btn btn-primary btn-lg btn-success" href="app.html#/login" role="button">Log in</a>
