--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -15,7 +15,8 @@
 </head>
 
 <body>
-      <nav class="navbar navbar-default navbar-static-top navbar-inverse" role="navigation">
+
+      <nav class="navbar navbar-default navbar-static-top navbar-warning" role="navigation">
         <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div id="nav-head" class="navbar-header">
@@ -28,6 +29,11 @@
               <a class="navbar-brand" href="#">Gitboard</a>
           </div>
           <div class="collapse navbar-collapse" id="menu">
+            <ul class="nav navbar-nav">
+                <li><a href="#features">Features</a></li>
+                <li><a href="#faq">Questions &amp; Answers</a></li>
+                <li><a href="https://github.com/adewes/gitboard">View on Github <i class="fa fa-github"></i></a></li>
+            </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="app.html#/login">Login</a></li>
             </ul>
@@ -54,7 +60,7 @@
           <div class="narrow-container container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Features</h1>
+                    <h1><a name="features">Features</a></h1>
                 </div>
             </div>
             <div class="row">
@@ -72,7 +78,7 @@
           <div class="narrow-container container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Questions &amp; Answers</h1>
+                    <h1><a name="faq">Questions &amp; Answers</a></h1>
                 </div>
             </div>
             <div class="row">
