--- a/src/scss/modules/_colors.scss
+++ b/src/scss/modules/_colors.scss
@@ -52,6 +52,8 @@ $_color-base-yellow: #ffff00;
 $_color-base-orange: #ffaa00;
 $_color-base-purple: #a020f0;
 
+$logo-color: #359EFF;
+
 
 $palettes: (
     black: (
