--- a/src/scss/partials/_sprintboard.scss
+++ b/src/scss/partials/_sprintboard.scss
@@ -165,69 +165,18 @@ body{
             font-weight:bold !important;
         }
 
-        .label-1,
-        .label-2,
-        .label-3,
-        .label-4,
-        .label-5,
-        .label-6,
-        .label-7,
-        .label-8,
-        .label-9,
-        .label-10,
-        .label-11,
-        .label-12
-        {
-            position:absolute;
-            top:0;
-            left:0;
-            width:5px;
-            height:16px;
+        @for $i from 0 through 16{
+          .label-#{($i)+1} {
+              position: relative;
+              position:absolute;
+              top:0;
+              left:#{$i*4}px;
+              width:3px;
+              height:16px;
+
+          }
         }
 
-        .label-1{
-            left:0px;
-        }
-
-        .label-2{
-            left:5px;
-        }
-
-        .label-3{
-            left:10px;
-        }
-
-        .label-4{
-            left:15px;
-        }
-
-        .label-5{
-            left:20px;
-        }
-
-        .label-6{
-            left:25px;
-        }
-
-        .label-7{
-            left:30px;
-        }
-
-        .label-8{
-            left:35px;
-        }
-
-        .label-9{
-            left:40px;
-        }
-
-        .label-10{
-            left:45px;
-        }
-
-        .label-11{
-            left:50px;
-        }
     }
 
 }
