--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-      <nav class="navbar navbar-default navbar-static-top navbar-warning" role="navigation">
+      <nav class="navbar navbar-default navbar-static-top navbar-gitboard" role="navigation">
         <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div id="nav-head" class="navbar-header">
