--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-      <nav class="navbar navbar-default navbar-static-top navbar-warning" role="navigation">
+      <nav class="navbar navbar-default navbar-static-top navbar-gitboard" role="navigation">
         <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div id="nav-head" class="navbar-header">
