Worked on homepage; added different logo sizes.

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -26,7 +26,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-              <a class="navbar-brand" href="#">Gitboard</a>
+              <a class="navbar-brand" href="#"><img style="float:left; margin-right:5px;" src="static/assets/images/homepage/logo.svg" height="32"/> Gitboard</a>
           </div>
           <div class="collapse navbar-collapse" id="menu">
             <ul class="nav navbar-nav">
@@ -65,10 +65,58 @@
             </div>
             <div class="row">
                 <div class="col-md-4">
-
+                    <img width="100%" src="static/assets/images/homepage/arrow.svg" />
                 </div>
                 <div class="col-md-6">
-                <h2>Works out of the box</h2>
+                <h1>Keep track of your goals</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <h1>Keep track of your goals</h1>
+                </div>
+                <div class="col-md-4">
+                    <img width="100%" src="static/assets/images/homepage/astronaut.svg" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <img width="100%" src="static/assets/images/homepage/letter.svg" />
+                </div>
+                <div class="col-md-6">
+                <h1>Keep track of your goals</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                <h1>Keep track of your goals</h1>
+                </div>
+                <div class="col-md-4">
+                    <img width="100%" src="static/assets/images/homepage/monitor.svg" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <img width="100%" src="static/assets/images/homepage/shield.svg" />
+                </div>
+                <div class="col-md-6">
+                <h1>Keep track of your goals</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                <h1>Keep track of your goals</h1>
+                </div>
+                <div class="col-md-4">
+                    <img width="100%" src="static/assets/images/homepage/card.svg" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <img width="100%" src="static/assets/images/homepage/mouse.svg" />
+                </div>
+                <div class="col-md-6">
+                <h1>Keep track of your goals</h1>
                 </div>
             </div>
           </div>
