Moved all the issue logic into a seperate class.

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -60,7 +60,7 @@
           <div class="narrow-container container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1><a name="features">Features</a></h1>
+                    <h1><a name="features">&nbsp;</a></h1>
                 </div>
             </div>
             <div class="row">
@@ -72,27 +72,27 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6">
-                    <h1>Keep track of your goals</h1>
-                </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-md-push-6">
                     <img width="100%" src="static/assets/images/homepage/astronaut.svg" />
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <img width="100%" src="static/assets/images/homepage/letter.svg" />
-                </div>
-                <div class="col-md-6">
-                <h1>Keep track of your goals</h1>
+                <div class="col-md-6 col-md-pull-4">
+                    <h1>Keep track of your goals</h1>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6">
-                <h1>Keep track of your goals</h1>
-                </div>
                 <div class="col-md-4">
                     <img width="100%" src="static/assets/images/homepage/monitor.svg" />
+                </div>
+                <div class="col-md-6">
+                <h1>Keep track of your goals</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 col-md-push-6">
+                    <img width="100%" src="static/assets/images/homepage/letter.svg" />
+                </div>
+                <div class="col-md-6 col-md-pull-4">
+                <h1>Keep track of your goals</h1>
                 </div>
             </div>
             <div class="row">
@@ -104,11 +104,11 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6">
-                <h1>Keep track of your goals</h1>
-                </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-md-push-6">
                     <img width="100%" src="static/assets/images/homepage/card.svg" />
+                </div>
+                <div class="col-md-6 col-md-pull-4">
+                <h1>Keep track of your goals</h1>
                 </div>
             </div>
             <div class="row">
