--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -25,7 +25,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-              <a class="navbar-brand" href="index.html">Gitboard</a>
+              <a class="navbar-brand" href="index.html"><img style="float:left; margin-right:5px;" src="static/assets/images/homepage/logo.svg" height="32"/> Gitboard</a>
           </div>
           <div class="collapse navbar-collapse" id="menu">
             <ul class="nav navbar-nav">
@@ -39,6 +39,11 @@
       </div>
 
       <section id="app">
+        <div class="panel panel-info">
+            <div class="panel-body">
+                <h3><i class="fa fa-refresh fa-spin"></i> Please wait, loading Gitboard...</h3>
+            </div>
+        </div>
       </section>
 
 
