--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -218,5 +218,17 @@
         </div>
       </footer>
 
+      <!--Google Analytics Tracking - feel free to remove this if you self-host your version-->
+      <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-62425211-3', 'auto');
+        ga('send', 'pageview');
+
+      </script>
+
   </body>
 </html>
